# cmake_learning

./: .gitignore  README.md
cmake_handbook/: README.md
cmake_handbook/tutorial/: CMakeLists.txt  CTestConfig.cmake  ProjectConfig.h.in  sqrt.cpp
cmake_handbook/tutorial/MathFunctions/: CMakeLists.txt  MakeTable.cpp  MathFunctions.h  mysqrt.cpp
cmake_practice/: README.md
cmake_practice/t2/: CMakeLists.txt
cmake_practice/t2/src/: CMakeLists.txt
cmake_practice/t3/: CMakeLists.txt
cmake_practice/t3/lib/: hello.cpp
cmake_practice/t4/src/: CMakeLists.txt
docs/: CMake_Rules.md
t1/: CMakeLists.txt
t2/: CMakeLists.txt  COPYRIGHT  README.md
t3/lib/: CMakeLists.txt  hello.h
t4/: CMakeLists.txt
t5/: CMakeLists.txt
t5/src/: CMakeLists.txt  main.c
t6/: CMakeLists.txt
t6/cmake/: FindHELLO.cmake
t6/src/: CMakeLists.txt  main.cpp
