SET(LIB_SRC hello.cpp)

# 生成动态库
ADD_LIBRARY(hello SHARED ${LIB_SRC})
# 指定版本号
# VERSION指动态库版本号，SOVERSION指API版本号
SET_TARGET_PROPERTIES(hello PROPERTIES VERSION 1.0 SOVERSION 1.1)

# 生成静态库
ADD_LIBRARY(hello_static STATIC ${LIB_SRC})
# 构建时不要清理同名的动态库
SET_TARGET_PROPERTIES(hello PROPERTIES CLEAN_DIRECT_OUTPUT 1)
# 重命名
SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")

# 查看
GET_TARGET_PROPERTY(OUTPUT_VALUE hello_static OUTPUT_NAME)
MESSAGE(STATUS "This is the hello_static OUTPUT_NAME: " ${OUTPUT_VALUE})

# 安装
# 静态库使用关键字ARCHIVE
INSTALL(TARGETS hello hello_static 
	LIBRARY DESTINATION lib 
	ARCHIVE DESTINATION lib)
INSTALL(FILES hello.h DESTINATION include/hello)
